kubernetes/manifest/app-test-1/app-test-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-test-1
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app
  namespace: app-test-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
      - name: my-web-app
        # image: da1ly/web:1.2
        # image: da1ly/web:2.1.2
        image: da1ly/app:sha-c741172
        # image: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "1024Mi"
            cpu: "150m"


---

apiVersion: v1
kind: Service
metadata:
  name: my-web-app
  namespace: app-test-1
spec:
  type: ClusterIP
  selector:
    app: my-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: app-test-1
  annotations:
    nginx.ingress.kubernetes.io/proxy-redirect-from: http://
    nginx.ingress.kubernetes.io/proxy-redirect-to: https://
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
      - gre4kas.fun
    secretName: coffee-secret-tls
  ingressClassName: nginx
  rules:
  - host: gre4kas.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-web-app
            port:
              number: 80
